introduced two functions. commit to avoid occasion deletion

--- a/CtgExperiments.ipynb
+++ b/CtgExperiments.ipynb
@@ -41,6 +41,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[<IBMQBackend('ibmqx4') from IBMQ()>, <IBMQBackend('ibmq_16_melbourne') from IBMQ()>]\n",
       "[[1, 0], [1, 2], [2, 3], [4, 3], [4, 10], [5, 4], [5, 6], [5, 9], [6, 8], [7, 8], [9, 8], [9, 10], [11, 3], [11, 10], [11, 12], [12, 2], [13, 1], [13, 12]]\n"
      ]
     }
@@ -49,10 +50,10 @@
     "#select a backend\n",
     "IBMQ.load_accounts()\n",
     "backends = IBMQ.backends(simulator=False,filters=lambda x: x.configuration().n_qubits > 4)\n",
-    "least_busy =least_busy(backends)\n",
+    "print(backends)\n",
     "#print(available)\n",
     "#least_busy = BasicAer.get_backend('qasm_simulator')\n",
-    "#least_busy = IBMQ.get_backend('ibmq_16_melbourne')\n",
+    "least_busy = IBMQ.get_backend('ibmq_16_melbourne')\n",
     "couplingMap = least_busy.configuration().coupling_map\n",
     "print(couplingMap)\n",
     "qubitsSize = least_busy.configuration().n_qubits\n"
@@ -60,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +88,8 @@
     "        #This part corresponds for part of experiment without minimal or no changes\n",
     "        qr,cr,qc = ioClass.createCircuitAndSetInput(i)\n",
     "        qc,qr = ctg.readGatesFromIOClass(qr,qc, ioClass)\n",
-    "        print(qr)\n",
+    "        print(\"Coupling is\",ctg.coupling)\n",
+    "        ctg.layOutQubits()\n",
     "        badLayout = prepareBadLayout(qr)\n",
     "        measureFidelityWithoutChanges(qr,cr,qc,badLayout)\n",
     "        \n",
@@ -109,9 +111,10 @@
     "def measureFidelityWithoutChanges(qr,cr,qc,bad_layout):\n",
     "    #least_busy = BasicAer.get_backend('qasm_simulator')\n",
     "    qc.measure(qr,cr)\n",
-    "    print(qc.qasm())\n",
     "    qobj = qcompile(qc,least_busy,initial_layout=bad_layout,pass_manager=None)\n",
-    "    print(qobj.experiments[0].header.as_dict()[\"compiled_circuit_qasm\"])\n",
+    "    #This line provides print of the compiled circuit qasm\n",
+    "    #print(qobj.experiments[0].header.as_dict()[\"compiled_circuit_qasm\"])\n",
+    "    \n",
     "    #job = execute(qc,least_busy,shots=200)\n",
     "    #result = job.result()\n",
     "    #print(result.get_counts())\n",
@@ -130,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -143,231 +146,47 @@
       "The circuit has no garbage lines in it or file parsed incorrectly, check ioclass\n",
       "The circuit has no constant inputs lines in it or file parsed incorrectly, check ioclass\n",
       "['ab', 'bc', 'cd', 'de', 'ek', 'ef', 'fg', 'fj', 'gi', 'hi', 'ij', 'jk', 'dl', 'kl', 'lm', 'cm', 'bn', 'mn']\n",
-      "QuantumRegister(3, 'q2')\n",
-      "OPENQASM 2.0;\n",
-      "include \"qelib1.inc\";\n",
-      "qreg q2[3];\n",
-      "creg c2[3];\n",
-      "cx q2[0],q2[1];\n",
-      "h q2[0];\n",
-      "h q2[1];\n",
-      "cx q2[0],q2[1];\n",
-      "h q2[0];\n",
-      "h q2[1];\n",
-      "cx q2[0],q2[1];\n",
-      "cx q2[1],q2[2];\n",
-      "h q2[1];\n",
-      "h q2[2];\n",
-      "cx q2[1],q2[2];\n",
-      "h q2[1];\n",
-      "h q2[2];\n",
-      "cx q2[1],q2[2];\n",
-      "cx q2[0],q2[1];\n",
-      "h q2[0];\n",
-      "h q2[1];\n",
-      "cx q2[0],q2[1];\n",
-      "h q2[0];\n",
-      "h q2[1];\n",
-      "cx q2[0],q2[1];\n",
-      "tdg q2[1];\n",
-      "h q2[2];\n",
-      "cx q2[2],q2[1];\n",
-      "t q2[1];\n",
-      "tdg q2[2];\n",
-      "cx q2[2],q2[1];\n",
-      "h q2[2];\n",
-      "cx q2[0],q2[1];\n",
-      "h q2[0];\n",
-      "h q2[1];\n",
-      "cx q2[0],q2[1];\n",
-      "h q2[0];\n",
-      "h q2[1];\n",
-      "cx q2[0],q2[1];\n",
-      "tdg q2[1];\n",
-      "h q2[2];\n",
-      "cx q2[2],q2[1];\n",
-      "t q2[1];\n",
-      "tdg q2[2];\n",
-      "cx q2[2],q2[1];\n",
-      "h q2[2];\n",
-      "cx q2[0],q2[1];\n",
-      "h q2[2];\n",
-      "cx q2[2],q2[1];\n",
-      "t q2[2];\n",
-      "tdg q2[1];\n",
-      "cx q2[2],q2[1];\n",
-      "h q2[2];\n",
-      "t q2[1];\n",
-      "cx q2[0],q2[1];\n",
-      "cx q2[1],q2[2];\n",
-      "h q2[1];\n",
-      "h q2[2];\n",
-      "cx q2[1],q2[2];\n",
-      "h q2[1];\n",
-      "h q2[2];\n",
-      "cx q2[1],q2[2];\n",
-      "cx q2[0],q2[1];\n",
-      "h q2[0];\n",
-      "h q2[1];\n",
-      "cx q2[0],q2[1];\n",
-      "h q2[0];\n",
-      "h q2[1];\n",
-      "cx q2[0],q2[1];\n",
-      "cx q2[2],q2[1];\n",
-      "cx q2[1],q2[2];\n",
-      "cx q2[0],q2[2];\n",
-      "cx q2[2],q2[1];\n",
-      "measure q2[0] -> c2[0];\n",
-      "measure q2[1] -> c2[1];\n",
-      "measure q2[2] -> c2[2];\n",
-      "\n",
-      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x0000020A540EACF8>\n",
+      "Coupling is {'b': {'c', 'n', 'a'}, 'a': {'b'}, 'c': {'m', 'b', 'd'}, 'd': {'e', 'l', 'c'}, 'e': {'f', 'k', 'd'}, 'k': {'j', 'e', 'l'}, 'f': {'j', 'e', 'g'}, 'g': {'f', 'i'}, 'j': {'k', 'f', 'i'}, 'i': {'j', 'g', 'h'}, 'h': {'i'}, 'l': {'m', 'k', 'd'}, 'm': {'l', 'n', 'c'}, 'n': {'m', 'b'}}\n",
+      "The tuple in maximumElement list is ('b', {'c', 'n', 'a'})\n",
+      "The tuple in maximumElement list is ('c', {'m', 'b', 'd'})\n",
+      "The tuple in maximumElement list is ('d', {'e', 'l', 'c'})\n",
+      "The tuple in maximumElement list is ('e', {'f', 'k', 'd'})\n",
+      "The tuple in maximumElement list is ('k', {'j', 'e', 'l'})\n",
+      "The tuple in maximumElement list is ('f', {'j', 'e', 'g'})\n",
+      "The tuple in maximumElement list is ('j', {'k', 'f', 'i'})\n",
+      "The tuple in maximumElement list is ('i', {'j', 'g', 'h'})\n",
+      "The tuple in maximumElement list is ('l', {'m', 'k', 'd'})\n",
+      "The tuple in maximumElement list is ('m', {'l', 'n', 'c'})\n",
+      "The tuple in maximumElement list is ('g', {'f', 'i'})\n",
+      "The tuple in maximumElement list is ('n', {'m', 'b'})\n",
+      "The tuple in maximumElement list is ('a', {'b'})\n",
+      "The tuple in maximumElement list is ('h', {'i'})\n",
+      "Result of highestConnectivityNodesInCoupling: [[('b', {'c', 'n', 'a'}), ('c', {'m', 'b', 'd'}), ('d', {'e', 'l', 'c'}), ('e', {'f', 'k', 'd'}), ('k', {'j', 'e', 'l'}), ('f', {'j', 'e', 'g'}), ('j', {'k', 'f', 'i'}), ('i', {'j', 'g', 'h'}), ('l', {'m', 'k', 'd'}), ('m', {'l', 'n', 'c'})], [('g', {'f', 'i'}), ('n', {'m', 'b'})], [('a', {'b'}), ('h', {'i'})]]\n",
+      "Result of highestConnectivityNodesInSkeleton: OrderedDict([('a', 2), ('b', 2), ('c', 2)])\n",
+      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x000001CBFB71BEB8>\n",
       "CouplingGraph is [(1, 0), (1, 2), (2, 3), (4, 3), (4, 10), (5, 4), (5, 6), (5, 9), (6, 8), (9, 8), (9, 10), (7, 8), (11, 3), (11, 10), (11, 12), (12, 2), (13, 1), (13, 12)]\n",
-      "Circuit_graph is  <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x0000020A540EACF8>\n",
-      "Final Layout is {(QuantumRegister(3, 'q2'), 0): (QuantumRegister(14, 'q'), 1), (QuantumRegister(3, 'q2'), 1): (QuantumRegister(14, 'q'), 0), (QuantumRegister(3, 'q2'), 2): (QuantumRegister(14, 'q'), 2)}\n",
-      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x0000020A54105048>\n",
-      "OPENQASM 2.0;\n",
-      "include \"qelib1.inc\";\n",
-      "qreg q[14];\n",
-      "creg c2[3];\n",
-      "cx q[1],q[0];\n",
-      "u2(0,pi) q[1];\n",
-      "u2(0,pi) q[0];\n",
-      "cx q[1],q[0];\n",
-      "u2(0,pi) q[1];\n",
-      "u2(0,pi) q[0];\n",
-      "cx q[1],q[0];\n",
-      "u2(0,pi) q[0];\n",
-      "cx q[1],q[2];\n",
-      "u2(0,pi) q[1];\n",
-      "u2(0,pi) q[2];\n",
-      "cx q[1],q[2];\n",
-      "u2(0,pi) q[1];\n",
-      "u2(0,pi) q[2];\n",
-      "cx q[1],q[2];\n",
-      "u2(0,pi) q[1];\n",
-      "cx q[1],q[0];\n",
-      "u2(0,pi) q[1];\n",
-      "u2(0,pi) q[0];\n",
-      "cx q[1],q[0];\n",
-      "u2(0,pi) q[1];\n",
-      "u2(0,pi) q[0];\n",
-      "cx q[1],q[0];\n",
-      "u2(0,pi) q[1];\n",
-      "cx q[1],q[2];\n",
-      "u2(0,pi) q[1];\n",
-      "u2(0,pi) q[2];\n",
-      "cx q[1],q[2];\n",
-      "u2(0,pi) q[1];\n",
-      "u2(0,pi) q[2];\n",
-      "cx q[1],q[2];\n",
-      "u2(0,pi) q[0];\n",
-      "cx q[1],q[0];\n",
-      "u2(0,pi) q[1];\n",
-      "u2(0,pi) q[0];\n",
-      "cx q[1],q[0];\n",
-      "u2(0,pi) q[1];\n",
-      "u2(0,pi) q[0];\n",
-      "cx q[1],q[0];\n",
-      "u1(-pi/4) q[0];\n",
-      "cx q[1],q[0];\n",
-      "u2(0,pi) q[0];\n",
-      "u2(0,pi) q[1];\n",
-      "cx q[1],q[0];\n",
-      "u2(0,pi) q[1];\n",
-      "u2(0,pi) q[0];\n",
-      "cx q[1],q[0];\n",
-      "u2(0,pi) q[0];\n",
-      "u2(0,pi) q[1];\n",
-      "cx q[1],q[2];\n",
-      "u3(-pi/4,pi/2,3*pi/2) q[1];\n",
-      "u3(pi/4,pi/2,3*pi/2) q[2];\n",
-      "cx q[1],q[2];\n",
-      "cx q[1],q[0];\n",
-      "u2(0,pi) q[1];\n",
-      "u2(0,pi) q[0];\n",
-      "cx q[1],q[0];\n",
-      "u2(0,pi) q[1];\n",
-      "u2(0,pi) q[0];\n",
-      "cx q[1],q[0];\n",
-      "u3(pi/4,pi/2,3*pi/2) q[1];\n",
-      "cx q[1],q[2];\n",
-      "u3(-pi/4,pi/2,3*pi/2) q[1];\n",
-      "u3(pi/4,pi/2,3*pi/2) q[2];\n",
-      "cx q[1],q[2];\n",
-      "cx q[1],q[0];\n",
-      "cx q[1],q[2];\n",
-      "u3(pi/4,pi/2,3*pi/2) q[1];\n",
-      "u3(-pi/4,pi/2,3*pi/2) q[2];\n",
-      "cx q[1],q[2];\n",
-      "u3(-pi/4,pi/2,3*pi/2) q[1];\n",
-      "cx q[1],q[0];\n",
-      "u2(0,pi) q[1];\n",
-      "cx q[1],q[2];\n",
-      "u2(0,pi) q[2];\n",
-      "u2(0,pi) q[1];\n",
-      "cx q[1],q[2];\n",
-      "u2(0,pi) q[2];\n",
-      "u2(0,pi) q[1];\n",
-      "cx q[1],q[2];\n",
-      "u2(0,pi) q[2];\n",
-      "u2(0,pi) q[1];\n",
-      "cx q[1],q[0];\n",
-      "u2(0,pi) q[1];\n",
-      "u2(0,pi) q[0];\n",
-      "cx q[1],q[0];\n",
-      "u2(0,pi) q[1];\n",
-      "u2(0,pi) q[0];\n",
-      "cx q[1],q[0];\n",
-      "cx q[1],q[2];\n",
-      "u2(0,pi) q[1];\n",
-      "u2(0,pi) q[2];\n",
-      "cx q[1],q[2];\n",
-      "u2(0,pi) q[0];\n",
-      "cx q[1],q[0];\n",
-      "u2(0,pi) q[0];\n",
-      "u2(0,pi) q[1];\n",
-      "cx q[1],q[0];\n",
-      "u2(0,pi) q[1];\n",
-      "u2(0,pi) q[0];\n",
-      "cx q[1],q[0];\n",
-      "cx q[1],q[2];\n",
-      "u2(0,pi) q[2];\n",
-      "cx q[1],q[0];\n",
-      "u2(0,pi) q[0];\n",
-      "u2(0,pi) q[1];\n",
-      "cx q[1],q[0];\n",
-      "u2(0,pi) q[1];\n",
-      "u2(0,pi) q[0];\n",
-      "cx q[1],q[0];\n",
-      "u2(0,pi) q[1];\n",
-      "cx q[1],q[2];\n",
-      "u2(0,pi) q[1];\n",
-      "u2(0,pi) q[2];\n",
-      "barrier q[0],q[1],q[2];\n",
-      "measure q[2] -> c2[2];\n",
-      "measure q[1] -> c2[1];\n",
-      "measure q[0] -> c2[0];\n",
-      "\n",
+      "Circuit_graph is  <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x000001CBFB71BEB8>\n",
+      "Final Layout is {(QuantumRegister(3, 'q0'), 0): (QuantumRegister(14, 'q'), 1), (QuantumRegister(3, 'q0'), 1): (QuantumRegister(14, 'q'), 0), (QuantumRegister(3, 'q0'), 2): (QuantumRegister(14, 'q'), 2)}\n",
+      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x000001CBFB72FF28>\n",
       "Self skeleton is ['ab', 'bc', 'ab', 'bc', 'bc', 'ab', 'bc', 'bc', 'ab', 'ab', 'bc', 'ab', 'bc', 'bc', 'ac', 'bc']\n",
       "Missing connections are [['a', 'c']]\n",
       "b\n",
-      "a\n",
       "c\n",
       "d\n",
       "e\n",
       "k\n",
       "f\n",
-      "g\n",
       "j\n",
       "i\n",
-      "h\n",
       "l\n",
       "m\n",
+      "g\n",
       "n\n",
+      "a\n",
+      "h\n",
       "Paths to a c\n",
       "Trace is\n",
-      "[['a', 'b', 'c'], ['a', 'b', 'n', 'm', 'c'], ['a', 'b', 'n', 'm', 'l', 'd', 'c'], ['a', 'b', 'n', 'm', 'l', 'k', 'j', 'i', 'g', 'f', 'e', 'd', 'c'], ['a', 'b', 'n', 'm', 'l', 'k', 'j', 'f', 'e', 'd', 'c'], ['a', 'b', 'n', 'm', 'l', 'k', 'e', 'd', 'c']]\n",
+      "[['a', 'b', 'c'], ['a', 'b', 'n', 'm', 'l', 'k', 'j', 'f', 'e', 'd', 'c'], ['a', 'b', 'n', 'm', 'l', 'k', 'j', 'i', 'g', 'f', 'e', 'd', 'c'], ['a', 'b', 'n', 'm', 'l', 'k', 'e', 'd', 'c'], ['a', 'b', 'n', 'm', 'l', 'd', 'c'], ['a', 'b', 'n', 'm', 'c']]\n",
       "['c', 'b'] ['a', 'c']\n",
       "['b', 'c'] ['a', 'c']\n",
       "['a', 'c'] ['a', 'c']\n",
@@ -376,9 +195,17 @@
       "['a', 'b']\n",
       "fixed skeleton ['ab', 'bc', 'ab', 'bc', 'bc', 'ab', 'bc', 'bc', 'ab', 'ab', 'bc', 'ab', 'bc', 'bc', 'ab', 'bc']\n",
       "FIxing the stuff\n",
-      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x0000020A53FDE080>\n",
-      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x0000020A53E68E48>\n",
+      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x000001CBFB82D710>\n",
+      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x000001CBFB7BD898>\n",
       "{'000': 200}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\krylo\\Anaconda3\\lib\\site-packages\\marshmallow\\schema.py:364: ChangedInMarshmallow3Warning: strict=False is not recommended. In marshmallow 3.0, schemas will always be strict. See https://marshmallow.readthedocs.io/en/latest/upgrading.html#schemas-are-always-strict\n",
+      "  ChangedInMarshmallow3Warning\n"
      ]
     }
    ],
