Created initial Layout

--- a/CtgExperiments.ipynb
+++ b/CtgExperiments.ipynb
@@ -146,28 +146,14 @@
       "The circuit has no garbage lines in it or file parsed incorrectly, check ioclass\n",
       "The circuit has no constant inputs lines in it or file parsed incorrectly, check ioclass\n",
       "['ab', 'bc', 'cd', 'de', 'ek', 'ef', 'fg', 'fj', 'gi', 'hi', 'ij', 'jk', 'dl', 'kl', 'lm', 'cm', 'bn', 'mn']\n",
-      "Coupling is {'b': {'c', 'n', 'a'}, 'a': {'b'}, 'c': {'m', 'b', 'd'}, 'd': {'e', 'l', 'c'}, 'e': {'f', 'k', 'd'}, 'k': {'j', 'e', 'l'}, 'f': {'j', 'e', 'g'}, 'g': {'f', 'i'}, 'j': {'k', 'f', 'i'}, 'i': {'j', 'g', 'h'}, 'h': {'i'}, 'l': {'m', 'k', 'd'}, 'm': {'l', 'n', 'c'}, 'n': {'m', 'b'}}\n",
-      "The tuple in maximumElement list is ('b', {'c', 'n', 'a'})\n",
-      "The tuple in maximumElement list is ('c', {'m', 'b', 'd'})\n",
-      "The tuple in maximumElement list is ('d', {'e', 'l', 'c'})\n",
-      "The tuple in maximumElement list is ('e', {'f', 'k', 'd'})\n",
-      "The tuple in maximumElement list is ('k', {'j', 'e', 'l'})\n",
-      "The tuple in maximumElement list is ('f', {'j', 'e', 'g'})\n",
-      "The tuple in maximumElement list is ('j', {'k', 'f', 'i'})\n",
-      "The tuple in maximumElement list is ('i', {'j', 'g', 'h'})\n",
-      "The tuple in maximumElement list is ('l', {'m', 'k', 'd'})\n",
-      "The tuple in maximumElement list is ('m', {'l', 'n', 'c'})\n",
-      "The tuple in maximumElement list is ('g', {'f', 'i'})\n",
-      "The tuple in maximumElement list is ('n', {'m', 'b'})\n",
-      "The tuple in maximumElement list is ('a', {'b'})\n",
-      "The tuple in maximumElement list is ('h', {'i'})\n",
-      "Result of highestConnectivityNodesInCoupling: [[('b', {'c', 'n', 'a'}), ('c', {'m', 'b', 'd'}), ('d', {'e', 'l', 'c'}), ('e', {'f', 'k', 'd'}), ('k', {'j', 'e', 'l'}), ('f', {'j', 'e', 'g'}), ('j', {'k', 'f', 'i'}), ('i', {'j', 'g', 'h'}), ('l', {'m', 'k', 'd'}), ('m', {'l', 'n', 'c'})], [('g', {'f', 'i'}), ('n', {'m', 'b'})], [('a', {'b'}), ('h', {'i'})]]\n",
-      "Result of highestConnectivityNodesInSkeleton: OrderedDict([('a', 2), ('b', 2), ('c', 2)])\n",
-      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x000001CBFB71BEB8>\n",
+      "Coupling is {'b': {'a', 'c', 'n'}, 'a': {'b'}, 'c': {'m', 'd', 'b'}, 'd': {'c', 'e', 'l'}, 'e': {'d', 'k', 'f'}, 'k': {'j', 'e', 'l'}, 'f': {'g', 'j', 'e'}, 'g': {'f', 'i'}, 'j': {'k', 'f', 'i'}, 'i': {'g', 'j', 'h'}, 'h': {'i'}, 'l': {'m', 'd', 'k'}, 'm': {'c', 'n', 'l'}, 'n': {'m', 'b'}}\n",
+      "SELFLAYOUTOFQUBIT ('c', 2)\n",
+      "Final layout is {'c': 'm', 'a': 'c', 'b': 'l'}\n",
+      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x00000199D35DF0B8>\n",
       "CouplingGraph is [(1, 0), (1, 2), (2, 3), (4, 3), (4, 10), (5, 4), (5, 6), (5, 9), (6, 8), (9, 8), (9, 10), (7, 8), (11, 3), (11, 10), (11, 12), (12, 2), (13, 1), (13, 12)]\n",
-      "Circuit_graph is  <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x000001CBFB71BEB8>\n",
+      "Circuit_graph is  <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x00000199D35DF0B8>\n",
       "Final Layout is {(QuantumRegister(3, 'q0'), 0): (QuantumRegister(14, 'q'), 1), (QuantumRegister(3, 'q0'), 1): (QuantumRegister(14, 'q'), 0), (QuantumRegister(3, 'q0'), 2): (QuantumRegister(14, 'q'), 2)}\n",
-      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x000001CBFB72FF28>\n",
+      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x00000199D375FD30>\n",
       "Self skeleton is ['ab', 'bc', 'ab', 'bc', 'bc', 'ab', 'bc', 'bc', 'ab', 'ab', 'bc', 'ab', 'bc', 'bc', 'ac', 'bc']\n",
       "Missing connections are [['a', 'c']]\n",
       "b\n",
@@ -186,7 +172,7 @@
       "h\n",
       "Paths to a c\n",
       "Trace is\n",
-      "[['a', 'b', 'c'], ['a', 'b', 'n', 'm', 'l', 'k', 'j', 'f', 'e', 'd', 'c'], ['a', 'b', 'n', 'm', 'l', 'k', 'j', 'i', 'g', 'f', 'e', 'd', 'c'], ['a', 'b', 'n', 'm', 'l', 'k', 'e', 'd', 'c'], ['a', 'b', 'n', 'm', 'l', 'd', 'c'], ['a', 'b', 'n', 'm', 'c']]\n",
+      "[['a', 'b', 'c'], ['a', 'b', 'n', 'm', 'c'], ['a', 'b', 'n', 'm', 'l', 'd', 'c'], ['a', 'b', 'n', 'm', 'l', 'k', 'j', 'f', 'e', 'd', 'c'], ['a', 'b', 'n', 'm', 'l', 'k', 'j', 'i', 'g', 'f', 'e', 'd', 'c'], ['a', 'b', 'n', 'm', 'l', 'k', 'e', 'd', 'c']]\n",
       "['c', 'b'] ['a', 'c']\n",
       "['b', 'c'] ['a', 'c']\n",
       "['a', 'c'] ['a', 'c']\n",
@@ -195,8 +181,8 @@
       "['a', 'b']\n",
       "fixed skeleton ['ab', 'bc', 'ab', 'bc', 'bc', 'ab', 'bc', 'bc', 'ab', 'ab', 'bc', 'ab', 'bc', 'bc', 'ab', 'bc']\n",
       "FIxing the stuff\n",
-      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x000001CBFB82D710>\n",
-      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x000001CBFB7BD898>\n",
+      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x00000199D3730518>\n",
+      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x00000199D38CFB70>\n",
       "{'000': 200}\n"
      ]
     },
