--- a/CtgExperiments.ipynb
+++ b/CtgExperiments.ipynb
@@ -22,7 +22,7 @@
     "from qiskit.tools.visualization import plot_histogram\n",
     "from qiskit.providers.ibmq import least_busy\n",
     "from math import pi\n",
-    "from qiskit.mapper._layout import Layout as l\n",
+    "from qiskit.mapper._layout import Layout as Ibmlayout\n",
     "from qiskit.tools.compiler import compile as qcompile\n",
     "import matplotlib.pyplot as plt\n",
     "import sys\n",
@@ -61,16 +61,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def prepareBadLayout(qReg):\n",
-    "    global couplingMap\n",
-    "    \n",
-    "    t = {    (qReg.name, 1): (qReg.name, 0),(qReg.name, 0): (qReg.name, 1), (qReg.name, 2): (qReg.name, 2)}\n",
-    "    q = l(t)\n",
-    "    return q\n",
+    "def prepareIBMQLayout(qReg,layout):\n",
+    "    ibmLayout = {}\n",
+    "    for elem in layout:\n",
+    "        print(\"Element in layout is\",elem,\" physical is\",layout[elem])\n",
+    "        quantum = ord(elem)-ord(\"a\")\n",
+    "        physical = ord(layout[elem])-ord(\"a\")\n",
+    "        quantumTuple = (qReg.name, quantum)\n",
+    "        ibmLayout[quantumTuple]=(qReg.name,physical)\n",
+    "    print(\"tempDictionary\",ibmLayout)\n",
+    "    print(\"items are\",ibmLayout.items())\n",
+    "    print(\"IBMLAYOUT\")\n",
+    "    print(ibmLayout)\n",
+    "    return ibmLayout\n",
     "\n",
     "def bigFunction(fileName):\n",
     "    ioClass = readCircuitInformation(fileName) \n",
@@ -88,10 +95,10 @@
     "        #This part corresponds for part of experiment without minimal or no changes\n",
     "        qr,cr,qc = ioClass.createCircuitAndSetInput(i)\n",
     "        qc,qr = ctg.readGatesFromIOClass(qr,qc, ioClass)\n",
-    "        print(\"Coupling is\",ctg.coupling)\n",
     "        ctg.layOutQubits()\n",
-    "        badLayout = prepareBadLayout(qr)\n",
-    "        measureFidelityWithoutChanges(qr,cr,qc,badLayout)\n",
+    "        tempLayout = ctg.layout.copy()\n",
+    "        ibmLayout = prepareIBMQLayout(qr,tempLayout)\n",
+    "        measureFidelityWithoutChanges(qr,cr,qc,ibmLayout)\n",
     "        \n",
     "        #This part corresponds for part of experiment after significant changes\n",
     "        qr,cr,qc = ioClass.createCircuitAndSetInput(i)\n",
@@ -108,12 +115,12 @@
     "    return ctg\n",
     "\n",
     "\n",
-    "def measureFidelityWithoutChanges(qr,cr,qc,bad_layout):\n",
+    "def measureFidelityWithoutChanges(qr,cr,qc,ibm_layout):\n",
     "    #least_busy = BasicAer.get_backend('qasm_simulator')\n",
     "    qc.measure(qr,cr)\n",
-    "    qobj = qcompile(qc,least_busy,initial_layout=bad_layout,pass_manager=None)\n",
+    "    qobj = qcompile(qc,least_busy,initial_layout=ibm_layout,pass_manager=None)\n",
     "    #This line provides print of the compiled circuit qasm\n",
-    "    #print(qobj.experiments[0].header.as_dict()[\"compiled_circuit_qasm\"])\n",
+    "    print(qobj.experiments[0].header.as_dict())#[\"compiled_circuit_qasm\"])\n",
     "    \n",
     "    #job = execute(qc,least_busy,shots=200)\n",
     "    #result = job.result()\n",
@@ -133,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -146,14 +153,27 @@
       "The circuit has no garbage lines in it or file parsed incorrectly, check ioclass\n",
       "The circuit has no constant inputs lines in it or file parsed incorrectly, check ioclass\n",
       "['ab', 'bc', 'cd', 'de', 'ek', 'ef', 'fg', 'fj', 'gi', 'hi', 'ij', 'jk', 'dl', 'kl', 'lm', 'cm', 'bn', 'mn']\n",
-      "Coupling is {'b': {'a', 'c', 'n'}, 'a': {'b'}, 'c': {'m', 'd', 'b'}, 'd': {'c', 'e', 'l'}, 'e': {'d', 'k', 'f'}, 'k': {'j', 'e', 'l'}, 'f': {'g', 'j', 'e'}, 'g': {'f', 'i'}, 'j': {'k', 'f', 'i'}, 'i': {'g', 'j', 'h'}, 'h': {'i'}, 'l': {'m', 'd', 'k'}, 'm': {'c', 'n', 'l'}, 'n': {'m', 'b'}}\n",
       "SELFLAYOUTOFQUBIT ('c', 2)\n",
       "Final layout is {'c': 'm', 'a': 'c', 'b': 'l'}\n",
-      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x00000199D35DF0B8>\n",
-      "CouplingGraph is [(1, 0), (1, 2), (2, 3), (4, 3), (4, 10), (5, 4), (5, 6), (5, 9), (6, 8), (9, 8), (9, 10), (7, 8), (11, 3), (11, 10), (11, 12), (12, 2), (13, 1), (13, 12)]\n",
-      "Circuit_graph is  <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x00000199D35DF0B8>\n",
-      "Final Layout is {(QuantumRegister(3, 'q0'), 0): (QuantumRegister(14, 'q'), 1), (QuantumRegister(3, 'q0'), 1): (QuantumRegister(14, 'q'), 0), (QuantumRegister(3, 'q0'), 2): (QuantumRegister(14, 'q'), 2)}\n",
-      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x00000199D375FD30>\n",
+      "Element in layout is c  physical is m\n",
+      "Element in layout is a  physical is c\n",
+      "Element in layout is b  physical is l\n",
+      "tempDictionary {('q4', 2): ('q4', 12), ('q4', 0): ('q4', 2), ('q4', 1): ('q4', 11)}\n",
+      "items are dict_items([(('q4', 2), ('q4', 12)), (('q4', 0), ('q4', 2)), (('q4', 1), ('q4', 11))])\n",
+      "IBMLAYOUT\n",
+      "{('q4', 2): ('q4', 12), ('q4', 0): ('q4', 2), ('q4', 1): ('q4', 11)}\n",
+      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x000001D7BAD0B2E8>\n",
+      "DEVICEREGISTERSASDSASDAS QuantumRegister(14, 'q')\n",
+      "PhysicalQUBITS are laspdalsdlas [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13]\n",
+      "{('q4', 2): ('q4', 12), ('q4', 0): ('q4', 2), ('q4', 1): ('q4', 11)}\n",
+      "Azazazas\n",
+      "{(QuantumRegister(3, 'q4'), 2): (QuantumRegister(14, 'q'), 12), (QuantumRegister(3, 'q4'), 0): (QuantumRegister(14, 'q'), 2), (QuantumRegister(3, 'q4'), 1): (QuantumRegister(14, 'q'), 11)}\n",
+      "GFJAPS:Dlsakd;laks;dlas,,\n",
+      "circ_qubits [(QuantumRegister(3, 'q4'), 0), (QuantumRegister(3, 'q4'), 1), (QuantumRegister(3, 'q4'), 2)]\n",
+      "Final Layout is {(QuantumRegister(3, 'q4'), 2): (QuantumRegister(14, 'q'), 2), (QuantumRegister(3, 'q4'), 0): (QuantumRegister(14, 'q'), 12), (QuantumRegister(3, 'q4'), 1): (QuantumRegister(14, 'q'), 11)}\n",
+      "SHITYLAYOUT {}\n",
+      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x000001D7BAD532E8>\n",
+      "{'n_qubits': 14, 'memory_slots': 3, 'qubit_labels': [['q', 0], ['q', 1], ['q', 2], ['q', 3], ['q', 4], ['q', 5], ['q', 6], ['q', 7], ['q', 8], ['q', 9], ['q', 10], ['q', 11], ['q', 12], ['q', 13]], 'clbit_labels': [['c4', 0], ['c4', 1], ['c4', 2]], 'qreg_sizes': [['q', 14]], 'creg_sizes': [['c4', 3]], 'name': 'circuit4', 'compiled_circuit_qasm': 'OPENQASM 2.0;\\ninclude \"qelib1.inc\";\\nqreg q[14];\\ncreg c4[3];\\nu2(0,pi) q[12];\\nu2(0,pi) q[11];\\ncx q[11],q[12];\\nu2(0,pi) q[11];\\nu2(0,pi) q[12];\\ncx q[11],q[12];\\nu2(0,pi) q[11];\\nu2(0,pi) q[12];\\ncx q[11],q[12];\\nu2(0,pi) q[11];\\nu2(0,pi) q[12];\\ncx q[12],q[2];\\nu2(0,pi) q[2];\\nu2(0,pi) q[12];\\ncx q[12],q[2];\\nu2(0,pi) q[12];\\nu2(0,pi) q[2];\\ncx q[12],q[2];\\ncx q[11],q[12];\\nu2(0,pi) q[12];\\nu2(0,pi) q[11];\\ncx q[11],q[12];\\nu2(0,pi) q[12];\\nu2(0,pi) q[11];\\ncx q[11],q[12];\\nu2(0,pi) q[11];\\ncx q[12],q[2];\\nu2(0,pi) q[2];\\nu2(0,pi) q[12];\\ncx q[12],q[2];\\nu2(0,pi) q[12];\\nu2(0,pi) q[2];\\ncx q[12],q[2];\\nu2(0,pi) q[12];\\ncx q[11],q[12];\\nu2(0,pi) q[11];\\nu2(0,pi) q[12];\\ncx q[11],q[12];\\nu2(0,pi) q[11];\\nu2(0,pi) q[12];\\ncx q[11],q[12];\\nu2(-pi/4,pi) q[11];\\nu2(0,pi) q[12];\\ncx q[11],q[12];\\nu2(0,pi) q[11];\\nu2(0,pi) q[12];\\ncx q[11],q[12];\\nu2(0,pi) q[11];\\nu2(0,pi) q[12];\\ncx q[11],q[12];\\nu2(0,pi) q[12];\\ncx q[12],q[2];\\nu3(-pi/4,pi/2,3*pi/2) q[12];\\nu3(pi/4,pi/2,3*pi/2) q[2];\\ncx q[12],q[2];\\nu2(0,pi) q[12];\\ncx q[11],q[12];\\nu2(0,pi) q[12];\\nu2(0,pi) q[11];\\ncx q[11],q[12];\\nu2(0,pi) q[12];\\nu2(0,pi) q[11];\\ncx q[11],q[12];\\nu2(0,3*pi/4) q[12];\\ncx q[12],q[2];\\nu3(-pi/4,pi/2,3*pi/2) q[12];\\nu3(pi/4,pi/2,3*pi/2) q[2];\\ncx q[12],q[2];\\nu2(0,pi) q[12];\\ncx q[11],q[12];\\nu2(0,pi) q[12];\\ncx q[12],q[2];\\nu3(pi/4,pi/2,3*pi/2) q[12];\\nu3(-pi/4,pi/2,3*pi/2) q[2];\\ncx q[12],q[2];\\nu2(pi/4,pi) q[12];\\ncx q[11],q[12];\\ncx q[12],q[2];\\nu2(0,pi) q[12];\\nu2(0,pi) q[2];\\ncx q[12],q[2];\\nu2(0,pi) q[12];\\nu2(0,pi) q[2];\\ncx q[12],q[2];\\nu2(0,pi) q[2];\\ncx q[11],q[12];\\nu2(0,pi) q[12];\\nu2(0,pi) q[11];\\ncx q[11],q[12];\\nu2(0,pi) q[12];\\nu2(0,pi) q[11];\\ncx q[11],q[12];\\nu2(0,pi) q[12];\\ncx q[12],q[2];\\nu2(0,pi) q[12];\\nu2(0,pi) q[2];\\ncx q[12],q[2];\\nu2(0,pi) q[2];\\ncx q[11],q[12];\\nu2(0,pi) q[11];\\nu2(0,pi) q[12];\\ncx q[11],q[12];\\nu2(0,pi) q[11];\\nu2(0,pi) q[12];\\ncx q[11],q[12];\\nu2(0,pi) q[11];\\nu2(0,pi) q[12];\\ncx q[12],q[2];\\nu2(0,pi) q[12];\\nu2(0,pi) q[2];\\ncx q[12],q[2];\\nu2(0,pi) q[12];\\ncx q[11],q[12];\\nu2(0,pi) q[11];\\nu2(0,pi) q[12];\\nbarrier q[2],q[11],q[12];\\nmeasure q[12] -> c4[2];\\nmeasure q[11] -> c4[1];\\nmeasure q[2] -> c4[0];\\n'}\n",
       "Self skeleton is ['ab', 'bc', 'ab', 'bc', 'bc', 'ab', 'bc', 'bc', 'ab', 'ab', 'bc', 'ab', 'bc', 'bc', 'ac', 'bc']\n",
       "Missing connections are [['a', 'c']]\n",
       "b\n",
@@ -172,7 +192,7 @@
       "h\n",
       "Paths to a c\n",
       "Trace is\n",
-      "[['a', 'b', 'c'], ['a', 'b', 'n', 'm', 'c'], ['a', 'b', 'n', 'm', 'l', 'd', 'c'], ['a', 'b', 'n', 'm', 'l', 'k', 'j', 'f', 'e', 'd', 'c'], ['a', 'b', 'n', 'm', 'l', 'k', 'j', 'i', 'g', 'f', 'e', 'd', 'c'], ['a', 'b', 'n', 'm', 'l', 'k', 'e', 'd', 'c']]\n",
+      "[['a', 'b', 'c'], ['a', 'b', 'n', 'm', 'c'], ['a', 'b', 'n', 'm', 'l', 'k', 'j', 'i', 'g', 'f', 'e', 'd', 'c'], ['a', 'b', 'n', 'm', 'l', 'k', 'j', 'f', 'e', 'd', 'c'], ['a', 'b', 'n', 'm', 'l', 'k', 'e', 'd', 'c'], ['a', 'b', 'n', 'm', 'l', 'd', 'c']]\n",
       "['c', 'b'] ['a', 'c']\n",
       "['b', 'c'] ['a', 'c']\n",
       "['a', 'c'] ['a', 'c']\n",
@@ -181,8 +201,8 @@
       "['a', 'b']\n",
       "fixed skeleton ['ab', 'bc', 'ab', 'bc', 'bc', 'ab', 'bc', 'bc', 'ab', 'ab', 'bc', 'ab', 'bc', 'bc', 'ab', 'bc']\n",
       "FIxing the stuff\n",
-      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x00000199D3730518>\n",
-      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x00000199D38CFB70>\n",
+      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x000001D7BA578748>\n",
+      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x000001D7BAFE3668>\n",
       "{'000': 200}\n"
      ]
     },
