--- a/CtgExperiments.ipynb
+++ b/CtgExperiments.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,42 +140,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "./tests/ham3_28.pla\n",
-      "The constants are set to .constants ---\n",
+      "./tests/ex1.pla\n",
+      "The constants are set to .constants 0-----\n",
       "\n",
-      "The circuit has no garbage lines in it or file parsed incorrectly, check ioclass\n",
-      "The circuit has no constant inputs lines in it or file parsed incorrectly, check ioclass\n",
+      "The circuit has garbage lines in it or file parsed incorrectly, check ioclass\n",
+      "The circuit has constant inputs in it or file parsed incorrectly, check ioclass\n",
       "['ab', 'bc', 'cd', 'de', 'ek', 'ef', 'fg', 'fj', 'gi', 'hi', 'ij', 'jk', 'dl', 'kl', 'lm', 'cm', 'bn', 'mn']\n",
-      "SELFLAYOUTOFQUBIT ('c', 2)\n",
-      "Final layout is {'c': 'm', 'a': 'c', 'b': 'l'}\n",
-      "Element in layout is c  physical is m\n",
-      "Element in layout is a  physical is c\n",
-      "Element in layout is b  physical is l\n",
-      "tempDictionary {('q4', 2): ('q4', 12), ('q4', 0): ('q4', 2), ('q4', 1): ('q4', 11)}\n",
-      "items are dict_items([(('q4', 2), ('q4', 12)), (('q4', 0), ('q4', 2)), (('q4', 1), ('q4', 11))])\n",
+      "Constant field is: 0-----\n",
+      "Length of constants field is: 6\n",
+      "Reached here in preparation of inputs!!!, the inputList is ['0', '0', '0', '0', '0', '1']\n",
+      "SELFLAYOUTOFQUBIT ('a', 5)\n",
+      "Final layout is {'a': 'm', 'c': 'c', 'f': 'l', 'b': 'd', 'd': 'b', 'e': 'a'}\n",
+      "Element in layout is a  physical is m\n",
+      "Element in layout is c  physical is c\n",
+      "Element in layout is f  physical is l\n",
+      "Element in layout is b  physical is d\n",
+      "Element in layout is d  physical is b\n",
+      "Element in layout is e  physical is a\n",
+      "tempDictionary {('q0', 0): ('q0', 12), ('q0', 2): ('q0', 2), ('q0', 5): ('q0', 11), ('q0', 1): ('q0', 3), ('q0', 3): ('q0', 1), ('q0', 4): ('q0', 0)}\n",
+      "items are dict_items([(('q0', 0), ('q0', 12)), (('q0', 2), ('q0', 2)), (('q0', 5), ('q0', 11)), (('q0', 1), ('q0', 3)), (('q0', 3), ('q0', 1)), (('q0', 4), ('q0', 0))])\n",
       "IBMLAYOUT\n",
-      "{('q4', 2): ('q4', 12), ('q4', 0): ('q4', 2), ('q4', 1): ('q4', 11)}\n",
-      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x000001D7BAD0B2E8>\n",
+      "{('q0', 0): ('q0', 12), ('q0', 2): ('q0', 2), ('q0', 5): ('q0', 11), ('q0', 1): ('q0', 3), ('q0', 3): ('q0', 1), ('q0', 4): ('q0', 0)}\n",
+      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x000002776A3073C8>\n",
       "DEVICEREGISTERSASDSASDAS QuantumRegister(14, 'q')\n",
       "PhysicalQUBITS are laspdalsdlas [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13]\n",
-      "{('q4', 2): ('q4', 12), ('q4', 0): ('q4', 2), ('q4', 1): ('q4', 11)}\n",
+      "{('q0', 0): ('q0', 12), ('q0', 2): ('q0', 2), ('q0', 5): ('q0', 11), ('q0', 1): ('q0', 3), ('q0', 3): ('q0', 1), ('q0', 4): ('q0', 0)}\n",
       "Azazazas\n",
-      "{(QuantumRegister(3, 'q4'), 2): (QuantumRegister(14, 'q'), 12), (QuantumRegister(3, 'q4'), 0): (QuantumRegister(14, 'q'), 2), (QuantumRegister(3, 'q4'), 1): (QuantumRegister(14, 'q'), 11)}\n",
+      "{(QuantumRegister(6, 'q0'), 0): (QuantumRegister(14, 'q'), 12), (QuantumRegister(6, 'q0'), 2): (QuantumRegister(14, 'q'), 2), (QuantumRegister(6, 'q0'), 5): (QuantumRegister(14, 'q'), 11), (QuantumRegister(6, 'q0'), 1): (QuantumRegister(14, 'q'), 3), (QuantumRegister(6, 'q0'), 3): (QuantumRegister(14, 'q'), 1), (QuantumRegister(6, 'q0'), 4): (QuantumRegister(14, 'q'), 0)}\n",
       "GFJAPS:Dlsakd;laks;dlas,,\n",
-      "circ_qubits [(QuantumRegister(3, 'q4'), 0), (QuantumRegister(3, 'q4'), 1), (QuantumRegister(3, 'q4'), 2)]\n",
-      "Final Layout is {(QuantumRegister(3, 'q4'), 2): (QuantumRegister(14, 'q'), 2), (QuantumRegister(3, 'q4'), 0): (QuantumRegister(14, 'q'), 12), (QuantumRegister(3, 'q4'), 1): (QuantumRegister(14, 'q'), 11)}\n",
+      "circ_qubits [(QuantumRegister(6, 'q0'), 0), (QuantumRegister(6, 'q0'), 1), (QuantumRegister(6, 'q0'), 2), (QuantumRegister(6, 'q0'), 3), (QuantumRegister(6, 'q0'), 4), (QuantumRegister(6, 'q0'), 5)]\n",
+      "Final Layout is {(QuantumRegister(6, 'q0'), 0): (QuantumRegister(14, 'q'), 12), (QuantumRegister(6, 'q0'), 2): (QuantumRegister(14, 'q'), 1), (QuantumRegister(6, 'q0'), 5): (QuantumRegister(14, 'q'), 11), (QuantumRegister(6, 'q0'), 1): (QuantumRegister(14, 'q'), 3), (QuantumRegister(6, 'q0'), 3): (QuantumRegister(14, 'q'), 2), (QuantumRegister(6, 'q0'), 4): (QuantumRegister(14, 'q'), 0)}\n",
       "SHITYLAYOUT {}\n",
-      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x000001D7BAD532E8>\n",
-      "{'n_qubits': 14, 'memory_slots': 3, 'qubit_labels': [['q', 0], ['q', 1], ['q', 2], ['q', 3], ['q', 4], ['q', 5], ['q', 6], ['q', 7], ['q', 8], ['q', 9], ['q', 10], ['q', 11], ['q', 12], ['q', 13]], 'clbit_labels': [['c4', 0], ['c4', 1], ['c4', 2]], 'qreg_sizes': [['q', 14]], 'creg_sizes': [['c4', 3]], 'name': 'circuit4', 'compiled_circuit_qasm': 'OPENQASM 2.0;\\ninclude \"qelib1.inc\";\\nqreg q[14];\\ncreg c4[3];\\nu2(0,pi) q[12];\\nu2(0,pi) q[11];\\ncx q[11],q[12];\\nu2(0,pi) q[11];\\nu2(0,pi) q[12];\\ncx q[11],q[12];\\nu2(0,pi) q[11];\\nu2(0,pi) q[12];\\ncx q[11],q[12];\\nu2(0,pi) q[11];\\nu2(0,pi) q[12];\\ncx q[12],q[2];\\nu2(0,pi) q[2];\\nu2(0,pi) q[12];\\ncx q[12],q[2];\\nu2(0,pi) q[12];\\nu2(0,pi) q[2];\\ncx q[12],q[2];\\ncx q[11],q[12];\\nu2(0,pi) q[12];\\nu2(0,pi) q[11];\\ncx q[11],q[12];\\nu2(0,pi) q[12];\\nu2(0,pi) q[11];\\ncx q[11],q[12];\\nu2(0,pi) q[11];\\ncx q[12],q[2];\\nu2(0,pi) q[2];\\nu2(0,pi) q[12];\\ncx q[12],q[2];\\nu2(0,pi) q[12];\\nu2(0,pi) q[2];\\ncx q[12],q[2];\\nu2(0,pi) q[12];\\ncx q[11],q[12];\\nu2(0,pi) q[11];\\nu2(0,pi) q[12];\\ncx q[11],q[12];\\nu2(0,pi) q[11];\\nu2(0,pi) q[12];\\ncx q[11],q[12];\\nu2(-pi/4,pi) q[11];\\nu2(0,pi) q[12];\\ncx q[11],q[12];\\nu2(0,pi) q[11];\\nu2(0,pi) q[12];\\ncx q[11],q[12];\\nu2(0,pi) q[11];\\nu2(0,pi) q[12];\\ncx q[11],q[12];\\nu2(0,pi) q[12];\\ncx q[12],q[2];\\nu3(-pi/4,pi/2,3*pi/2) q[12];\\nu3(pi/4,pi/2,3*pi/2) q[2];\\ncx q[12],q[2];\\nu2(0,pi) q[12];\\ncx q[11],q[12];\\nu2(0,pi) q[12];\\nu2(0,pi) q[11];\\ncx q[11],q[12];\\nu2(0,pi) q[12];\\nu2(0,pi) q[11];\\ncx q[11],q[12];\\nu2(0,3*pi/4) q[12];\\ncx q[12],q[2];\\nu3(-pi/4,pi/2,3*pi/2) q[12];\\nu3(pi/4,pi/2,3*pi/2) q[2];\\ncx q[12],q[2];\\nu2(0,pi) q[12];\\ncx q[11],q[12];\\nu2(0,pi) q[12];\\ncx q[12],q[2];\\nu3(pi/4,pi/2,3*pi/2) q[12];\\nu3(-pi/4,pi/2,3*pi/2) q[2];\\ncx q[12],q[2];\\nu2(pi/4,pi) q[12];\\ncx q[11],q[12];\\ncx q[12],q[2];\\nu2(0,pi) q[12];\\nu2(0,pi) q[2];\\ncx q[12],q[2];\\nu2(0,pi) q[12];\\nu2(0,pi) q[2];\\ncx q[12],q[2];\\nu2(0,pi) q[2];\\ncx q[11],q[12];\\nu2(0,pi) q[12];\\nu2(0,pi) q[11];\\ncx q[11],q[12];\\nu2(0,pi) q[12];\\nu2(0,pi) q[11];\\ncx q[11],q[12];\\nu2(0,pi) q[12];\\ncx q[12],q[2];\\nu2(0,pi) q[12];\\nu2(0,pi) q[2];\\ncx q[12],q[2];\\nu2(0,pi) q[2];\\ncx q[11],q[12];\\nu2(0,pi) q[11];\\nu2(0,pi) q[12];\\ncx q[11],q[12];\\nu2(0,pi) q[11];\\nu2(0,pi) q[12];\\ncx q[11],q[12];\\nu2(0,pi) q[11];\\nu2(0,pi) q[12];\\ncx q[12],q[2];\\nu2(0,pi) q[12];\\nu2(0,pi) q[2];\\ncx q[12],q[2];\\nu2(0,pi) q[12];\\ncx q[11],q[12];\\nu2(0,pi) q[11];\\nu2(0,pi) q[12];\\nbarrier q[2],q[11],q[12];\\nmeasure q[12] -> c4[2];\\nmeasure q[11] -> c4[1];\\nmeasure q[2] -> c4[0];\\n'}\n",
-      "Self skeleton is ['ab', 'bc', 'ab', 'bc', 'bc', 'ab', 'bc', 'bc', 'ab', 'ab', 'bc', 'ab', 'bc', 'bc', 'ac', 'bc']\n",
-      "Missing connections are [['a', 'c']]\n",
+      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x000002776A2E0F98>\n",
+      "{'n_qubits': 14, 'memory_slots': 6, 'qubit_labels': [['q', 0], ['q', 1], ['q', 2], ['q', 3], ['q', 4], ['q', 5], ['q', 6], ['q', 7], ['q', 8], ['q', 9], ['q', 10], ['q', 11], ['q', 12], ['q', 13]], 'clbit_labels': [['c0', 0], ['c0', 1], ['c0', 2], ['c0', 3], ['c0', 4], ['c0', 5]], 'qreg_sizes': [['q', 14]], 'creg_sizes': [['c0', 6]], 'name': 'circuit0', 'compiled_circuit_qasm': 'OPENQASM 2.0;\\ninclude \"qelib1.inc\";\\nqreg q[14];\\ncreg c0[6];\\nu2(0,pi) q[12];\\nu3(pi,0,pi) q[11];\\nu2(0,pi) q[3];\\nu2(0,pi) q[2];\\ncx q[12],q[2];\\nu2(0,pi) q[12];\\nu2(0,pi) q[2];\\ncx q[12],q[2];\\nu2(0,pi) q[2];\\nu2(0,pi) q[12];\\ncx q[12],q[2];\\nu2(0,pi) q[12];\\nu2(0,pi) q[2];\\ncx q[12],q[2];\\nu2(0,pi) q[2];\\ncx q[2],q[3];\\nu2(0,pi) q[2];\\ncx q[12],q[2];\\nu2(0,pi) q[2];\\nu2(0,pi) q[12];\\ncx q[12],q[2];\\nu2(0,pi) q[12];\\nu2(0,pi) q[2];\\ncx q[12],q[2];\\ncx q[11],q[12];\\nu2(0,pi) q[12];\\nu2(0,pi) q[3];\\nu3(pi,0,pi) q[1];\\ncx q[1],q[2];\\nu2(0,pi) q[1];\\nu2(0,pi) q[2];\\ncx q[1],q[2];\\nu2(0,pi) q[1];\\nu2(0,pi) q[2];\\ncx q[1],q[2];\\nu2(0,pi) q[2];\\ncx q[12],q[2];\\nu2(0,pi) q[12];\\nu2(0,pi) q[2];\\ncx q[12],q[2];\\nu2(0,pi) q[2];\\nu2(0,pi) q[12];\\ncx q[12],q[2];\\nu2(0,pi) q[12];\\nu2(0,pi) q[2];\\ncx q[12],q[2];\\nu3(pi,0,pi) q[0];\\ncx q[1],q[0];\\nu2(0,pi) q[0];\\nu2(0,pi) q[1];\\ncx q[1],q[0];\\nu2(0,pi) q[1];\\nu2(0,pi) q[0];\\ncx q[1],q[0];\\ncx q[1],q[2];\\nbarrier q[2],q[3],q[12],q[0],q[1],q[11];\\nmeasure q[12] -> c0[2];\\nmeasure q[11] -> c0[5];\\nmeasure q[3] -> c0[1];\\nmeasure q[2] -> c0[0];\\nmeasure q[1] -> c0[4];\\nmeasure q[0] -> c0[3];\\n'}\n",
+      "Constant field is: 0-----\n",
+      "Length of constants field is: 6\n",
+      "Reached here in preparation of inputs!!!, the inputList is ['0', '0', '0', '0', '0', '1']\n",
+      "Self skeleton is ['ad', 'ab', 'af', 'ac', 'ae']\n",
+      "Missing connections are [['a', 'd'], ['a', 'f'], ['a', 'c'], ['a', 'e']]\n",
       "b\n",
       "c\n",
       "d\n",
@@ -190,20 +199,57 @@
       "n\n",
       "a\n",
       "h\n",
+      "Paths to a d\n",
+      "Trace is\n",
+      "[['a', 'b', 'n', 'm', 'c', 'd'], ['a', 'b', 'n', 'm', 'l', 'k', 'j', 'i', 'g', 'f', 'e', 'd'], ['a', 'b', 'n', 'm', 'l', 'k', 'j', 'f', 'e', 'd'], ['a', 'b', 'n', 'm', 'l', 'k', 'e', 'd'], ['a', 'b', 'n', 'm', 'l', 'd'], ['a', 'b', 'c', 'm', 'l', 'k', 'j', 'i', 'g', 'f', 'e', 'd'], ['a', 'b', 'c', 'm', 'l', 'k', 'j', 'f', 'e', 'd'], ['a', 'b', 'c', 'm', 'l', 'k', 'e', 'd'], ['a', 'b', 'c', 'm', 'l', 'd'], ['a', 'b', 'c', 'd']]\n",
+      "['d', 'a'] ['a', 'd']\n",
+      "replaceTo ['a', 'b', 'c', 'd']\n",
+      "sw a b\n",
+      "sw b c\n",
+      "['a', 'c']\n",
+      "fixed skeleton ['ad', 'ab', 'af', 'ac', 'ae']\n",
+      "Paths to a f\n",
+      "Trace is\n",
+      "[['a', 'b', 'n', 'm', 'c', 'd', 'l', 'k', 'j', 'i', 'g', 'f'], ['a', 'b', 'n', 'm', 'c', 'd', 'l', 'k', 'j', 'f'], ['a', 'b', 'n', 'm', 'c', 'd', 'l', 'k', 'e', 'f'], ['a', 'b', 'n', 'm', 'c', 'd', 'e', 'k', 'j', 'i', 'g', 'f'], ['a', 'b', 'n', 'm', 'c', 'd', 'e', 'k', 'j', 'f'], ['a', 'b', 'n', 'm', 'c', 'd', 'e', 'f'], ['a', 'b', 'n', 'm', 'l', 'k', 'j', 'i', 'g', 'f'], ['a', 'b', 'n', 'm', 'l', 'k', 'j', 'f'], ['a', 'b', 'n', 'm', 'l', 'k', 'e', 'f'], ['a', 'b', 'n', 'm', 'l', 'd', 'e', 'k', 'j', 'i', 'g', 'f'], ['a', 'b', 'n', 'm', 'l', 'd', 'e', 'k', 'j', 'f'], ['a', 'b', 'n', 'm', 'l', 'd', 'e', 'f'], ['a', 'b', 'c', 'm', 'l', 'k', 'j', 'i', 'g', 'f'], ['a', 'b', 'c', 'm', 'l', 'k', 'j', 'f'], ['a', 'b', 'c', 'm', 'l', 'k', 'e', 'f'], ['a', 'b', 'c', 'm', 'l', 'd', 'e', 'k', 'j', 'i', 'g', 'f'], ['a', 'b', 'c', 'm', 'l', 'd', 'e', 'k', 'j', 'f'], ['a', 'b', 'c', 'm', 'l', 'd', 'e', 'f'], ['a', 'b', 'c', 'd', 'l', 'k', 'j', 'i', 'g', 'f'], ['a', 'b', 'c', 'd', 'l', 'k', 'j', 'f'], ['a', 'b', 'c', 'd', 'l', 'k', 'e', 'f'], ['a', 'b', 'c', 'd', 'e', 'k', 'j', 'i', 'g', 'f'], ['a', 'b', 'c', 'd', 'e', 'k', 'j', 'f'], ['a', 'b', 'c', 'd', 'e', 'f']]\n",
+      "['d', 'c'] ['a', 'f']\n",
+      "['b', 'a'] ['a', 'f']\n",
+      "['f', 'a'] ['a', 'f']\n",
+      "replaceTo ['a', 'b', 'c', 'd', 'e', 'f']\n",
+      "sw a b\n",
+      "sw b c\n",
+      "sw c d\n",
+      "sw d e\n",
+      "['a', 'e']\n",
+      "fixed skeleton ['ad', 'ab', 'ae', 'ac', 'ae']\n",
       "Paths to a c\n",
       "Trace is\n",
-      "[['a', 'b', 'c'], ['a', 'b', 'n', 'm', 'c'], ['a', 'b', 'n', 'm', 'l', 'k', 'j', 'i', 'g', 'f', 'e', 'd', 'c'], ['a', 'b', 'n', 'm', 'l', 'k', 'j', 'f', 'e', 'd', 'c'], ['a', 'b', 'n', 'm', 'l', 'k', 'e', 'd', 'c'], ['a', 'b', 'n', 'm', 'l', 'd', 'c']]\n",
-      "['c', 'b'] ['a', 'c']\n",
-      "['b', 'c'] ['a', 'c']\n",
-      "['a', 'c'] ['a', 'c']\n",
+      "[['a', 'b', 'n', 'm', 'c'], ['a', 'b', 'n', 'm', 'l', 'k', 'j', 'i', 'g', 'f', 'e', 'd', 'c'], ['a', 'b', 'n', 'm', 'l', 'k', 'j', 'f', 'e', 'd', 'c'], ['a', 'b', 'n', 'm', 'l', 'k', 'e', 'd', 'c'], ['a', 'b', 'n', 'm', 'l', 'd', 'c'], ['a', 'b', 'c']]\n",
+      "['d', 'c'] ['a', 'c']\n",
+      "['b', 'a'] ['a', 'c']\n",
+      "['f', 'e'] ['a', 'c']\n",
+      "['c', 'a'] ['a', 'c']\n",
       "replaceTo ['a', 'b', 'c']\n",
       "sw a b\n",
       "['a', 'b']\n",
-      "fixed skeleton ['ab', 'bc', 'ab', 'bc', 'bc', 'ab', 'bc', 'bc', 'ab', 'ab', 'bc', 'ab', 'bc', 'bc', 'ab', 'bc']\n",
+      "fixed skeleton ['ad', 'ab', 'ae', 'ab', 'ae']\n",
+      "Paths to a e\n",
+      "Trace is\n",
+      "[['a', 'b', 'n', 'm', 'c', 'd', 'l', 'k', 'j', 'i', 'g', 'f', 'e'], ['a', 'b', 'n', 'm', 'c', 'd', 'l', 'k', 'j', 'f', 'e'], ['a', 'b', 'n', 'm', 'c', 'd', 'l', 'k', 'e'], ['a', 'b', 'n', 'm', 'c', 'd', 'e'], ['a', 'b', 'n', 'm', 'l', 'k', 'j', 'i', 'g', 'f', 'e'], ['a', 'b', 'n', 'm', 'l', 'k', 'j', 'f', 'e'], ['a', 'b', 'n', 'm', 'l', 'k', 'e'], ['a', 'b', 'n', 'm', 'l', 'd', 'e'], ['a', 'b', 'c', 'm', 'l', 'k', 'j', 'i', 'g', 'f', 'e'], ['a', 'b', 'c', 'm', 'l', 'k', 'j', 'f', 'e'], ['a', 'b', 'c', 'm', 'l', 'k', 'e'], ['a', 'b', 'c', 'm', 'l', 'd', 'e'], ['a', 'b', 'c', 'd', 'l', 'k', 'j', 'i', 'g', 'f', 'e'], ['a', 'b', 'c', 'd', 'l', 'k', 'j', 'f', 'e'], ['a', 'b', 'c', 'd', 'l', 'k', 'e'], ['a', 'b', 'c', 'd', 'e']]\n",
+      "['d', 'c'] ['a', 'e']\n",
+      "['b', 'a'] ['a', 'e']\n",
+      "['f', 'e'] ['a', 'e']\n",
+      "['c', 'b'] ['a', 'e']\n",
+      "['e', 'a'] ['a', 'e']\n",
+      "replaceTo ['a', 'b', 'c', 'd', 'e']\n",
+      "sw a b\n",
+      "sw b c\n",
+      "sw c d\n",
+      "['a', 'd']\n",
+      "fixed skeleton ['ad', 'ab', 'ad', 'ab', 'ae']\n",
       "FIxing the stuff\n",
-      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x000001D7BA578748>\n",
-      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x000001D7BAFE3668>\n",
-      "{'000': 200}\n"
+      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x000002776A483EF0>\n",
+      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x000002776A3BCB38>\n",
+      "{'110101': 200}\n"
      ]
     },
     {
@@ -216,7 +262,7 @@
     }
    ],
    "source": [
-    "fileName=\"ham3_28\"\n",
+    "fileName=\"ex1\"\n",
     "#if testFromFile(filename) == 0:\n",
     "fileName = testDir+fileName\n",
     "bigFunction(fileName)"
