--- a/TestAFunctionWithIOClass.ipynb
+++ b/TestAFunctionWithIOClass.ipynb
@@ -166,38 +166,44 @@
       "Constant field is: 0-----\n",
       "Length of constants field is: 6\n",
       "Reached here in preparation of inputs!!!, the inputList is ['0', '0', '0', '0', '0', '1']\n",
-      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x0000014B99770EF0>\n",
-      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x0000014B9EDC2748>\n",
+      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x000001DCBC1F0EF0>\n",
+      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x000001DCC18A3860>\n",
       "{'110101': 1024}\n",
       "Constant field is: 0-----\n",
       "Length of constants field is: 6\n",
       "Reached here in preparation of inputs!!!, the inputList is ['0', '1', '1', '0', '0', '1']\n",
-      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x0000014B997707F0>\n",
-      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x0000014B9EE132B0>\n",
+      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x000001DCBC1F0BE0>\n",
+      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x000001DCC18C1400>\n",
       "{'110011': 1024}\n",
       "Constant field is: 0-----\n",
       "Length of constants field is: 6\n",
       "Reached here in preparation of inputs!!!, the inputList is ['0', '0', '1', '0', '1', '1']\n",
-      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x0000014B9EDE8E10>\n",
-      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x0000014B9EDAFAC8>\n",
+      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x000001DCC1897B70>\n",
+      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x000001DCBC1F0748>\n",
       "{'100001': 1024}\n",
       "Constant field is: 0-----\n",
       "Length of constants field is: 6\n",
       "Reached here in preparation of inputs!!!, the inputList is ['0', '1', '0', '0', '1', '1']\n",
-      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x0000014B9EDE8F60>\n",
-      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x0000014B9EDAF550>\n",
+      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x000001DCC1897E80>\n",
+      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x000001DCC1850A58>\n",
       "{'100111': 1024}\n",
       "Constant field is: 0-----\n",
       "Length of constants field is: 6\n",
       "Reached here in preparation of inputs!!!, the inputList is ['0', '0', '0', '1', '1', '1']\n",
-      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x0000014B9EDC23C8>\n",
-      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x0000014B9EE2C978>\n",
+      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x000001DCC18C1978>\n",
+      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x000001DCC18DACF8>\n",
       "{'101101': 1024}\n",
       "Constant field is: 0-----\n",
       "Length of constants field is: 6\n",
       "Reached here in preparation of inputs!!!, the inputList is ['0', '1', '1', '1', '1', '1']\n",
-      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x0000014B99770EF0>\n",
-      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x0000014B9EDAF828>\n"
+      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x000001DCC18C1710>\n",
+      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x000001DCC1850898>\n",
+      "{'101011': 1024}\n",
+      "Constant field is: 0-----\n",
+      "Length of constants field is: 6\n",
+      "Reached here in preparation of inputs!!!, the inputList is ['0', '0', '1', '1', '0', '1']\n",
+      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x000001DCC18C49B0>\n",
+      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x000001DCC1B66860>\n"
      ]
     },
     {
@@ -212,72 +218,66 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'101011': 1024}\n",
-      "Constant field is: 0-----\n",
-      "Length of constants field is: 6\n",
-      "Reached here in preparation of inputs!!!, the inputList is ['0', '0', '1', '1', '0', '1']\n",
-      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x0000014B9EE1F780>\n",
-      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x0000014B9F0BB358>\n",
       "{'111001': 1024}\n",
       "Constant field is: 0-----\n",
       "Length of constants field is: 6\n",
       "Reached here in preparation of inputs!!!, the inputList is ['0', '1', '0', '1', '0', '1']\n",
-      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x0000014B9EE1F668>\n",
-      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x0000014B9F0C7E10>\n",
+      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x000001DCC18503C8>\n",
+      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x000001DCC1B7FCF8>\n",
       "{'111111': 1024}\n",
       "Constant field is: 0-----\n",
       "Length of constants field is: 6\n",
       "Reached here in preparation of inputs!!!, the inputList is ['0', '0', '1', '0', '0', '0']\n",
-      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x0000014B9F0D4A58>\n",
-      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x0000014B9F0A2BA8>\n",
+      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x000001DCC1B7FD68>\n",
+      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x000001DCC1B58208>\n",
       "{'010001': 1024}\n",
       "Constant field is: 0-----\n",
       "Length of constants field is: 6\n",
       "Reached here in preparation of inputs!!!, the inputList is ['0', '1', '0', '0', '0', '0']\n",
-      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x0000014B9F0C7128>\n",
-      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x0000014B9F0A2438>\n",
+      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x000001DCC1B7F2B0>\n",
+      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x000001DCC1B4C898>\n",
       "{'010111': 1024}\n",
       "Constant field is: 0-----\n",
       "Length of constants field is: 6\n",
       "Reached here in preparation of inputs!!!, the inputList is ['0', '0', '0', '0', '1', '0']\n",
-      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x0000014B9F0C75C0>\n",
-      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x0000014B9F0925C0>\n",
+      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x000001DCC1B669E8>\n",
+      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x000001DCC1B4C080>\n",
       "{'000101': 1024}\n",
       "Constant field is: 0-----\n",
       "Length of constants field is: 6\n",
       "Reached here in preparation of inputs!!!, the inputList is ['0', '1', '1', '0', '1', '0']\n",
-      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x0000014B9F0D47F0>\n",
-      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x0000014B9EE2CD68>\n",
+      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x000001DCC1B66A20>\n",
+      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x000001DCC18C45F8>\n",
       "{'000011': 1024}\n",
       "Constant field is: 0-----\n",
       "Length of constants field is: 6\n",
       "Reached here in preparation of inputs!!!, the inputList is ['0', '0', '1', '1', '1', '0']\n",
-      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x0000014B99770518>\n",
-      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x0000014B9EE2CBE0>\n",
+      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x000001DCC1B411D0>\n",
+      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x000001DCC1850C50>\n",
       "{'001001': 1024}\n",
       "Constant field is: 0-----\n",
       "Length of constants field is: 6\n",
       "Reached here in preparation of inputs!!!, the inputList is ['0', '1', '0', '1', '1', '0']\n",
-      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x0000014B9E8536D8>\n",
-      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x0000014B9EE092E8>\n",
+      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x000001DCC18DA438>\n",
+      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x000001DCC18C17F0>\n",
       "{'001111': 1024}\n",
       "Constant field is: 0-----\n",
       "Length of constants field is: 6\n",
       "Reached here in preparation of inputs!!!, the inputList is ['0', '0', '0', '1', '0', '0']\n",
-      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x0000014B9F0DA400>\n",
-      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x0000014B9EE09748>\n",
+      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x000001DCC18A4160>\n",
+      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x000001DCC1897EF0>\n",
       "{'011101': 1024}\n",
       "Constant field is: 0-----\n",
       "Length of constants field is: 6\n",
       "Reached here in preparation of inputs!!!, the inputList is ['0', '1', '1', '1', '0', '0']\n",
-      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x0000014B9EE2C390>\n",
-      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x0000014B99770978>\n",
+      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x000001DCC1850978>\n",
+      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x000001DCC18E3160>\n",
       "{'011011': 1024}\n",
-      "FAILURE: ./tests/ex1\n",
       "Input:Received:Expected\n",
       "{'00001': '1', '11001': '1', '01011': '1', '10011': '1', '00111': '1', '11111': '1', '01101': '1', '10101': '1', '01000': '1', '10000': '1', '00010': '1', '11010': '1', '01110': '1', '10110': '1', '00100': '1', '11100': '1'}\n",
-      "ERROR: 16\n",
-      "16 1\n"
+      "ERROR: 0\n",
+      "SUCCESS\n",
+      "0 1\n"
      ]
     }
    ],
