--- a/CtgExperiments.ipynb
+++ b/CtgExperiments.ipynb
@@ -73,10 +73,10 @@
     "        physical = ord(layout[elem])-ord(\"a\")\n",
     "        quantumTuple = (qReg.name, quantum)\n",
     "        ibmLayout[quantumTuple]=(qReg.name,physical)\n",
-    "    #print(\"tempDictionary\",ibmLayout)\n",
-    "    #print(\"items are\",ibmLayout.items())\n",
-    "    #print(\"IBMLAYOUT\")\n",
-    "    #print(ibmLayout)\n",
+    "    print(\"tempDictionary\",ibmLayout)\n",
+    "    print(\"items are\",ibmLayout.items())\n",
+    "    print(\"IBMLAYOUT\")\n",
+    "    print(ibmLayout)\n",
     "    return ibmLayout\n",
     "\n",
     "def bigFunction(fileName):\n",
@@ -95,16 +95,23 @@
     "        #This part corresponds for part of experiment without minimal or no changes\n",
     "        qr,cr,qc = ioClass.createCircuitAndSetInput(i)\n",
     "        qc,qr = ctg.readGatesFromIOClass(qr,qc, ioClass)\n",
-    "        ctg.layOutQubits()\n",
-    "        tempLayout = ctg.layout.copy()\n",
-    "        ibmLayout = prepareIBMQLayout(qr,tempLayout)\n",
-    "        measureFidelityWithoutChanges(qr,cr,qc,ibmLayout)\n",
+    "        measureFidelityWithoutChanges(qr,cr,qc)\n",
     "        \n",
     "        #This part corresponds for part of experiment after significant changes\n",
     "        qr,cr,qc = ioClass.createCircuitAndSetInput(i)\n",
     "        ctg = fixTheStuff(ctg)\n",
+    "      \n",
     "        #This one needs to comply with changes you did\n",
     "        qc,qr = ctg.readFixedGatesFromCtg(qr,qc)\n",
+    "        ctg.layOutQubits()\n",
+    "        tempLayout = ctg.layout.copy()\n",
+    "        ctg = fixTheStuff(ctg)\n",
+    "        ibmLayout = prepareIBMQLayout(qr,tempLayout)\n",
+    "        qc,qr = ctg.readFixedGatesFromCtg(qr,qc)\n",
+    "        ctg.layOutQubits()\n",
+    "        tempLayout = ctg.layout.copy()\n",
+    "        ctg = fixTheStuff(ctg)\n",
+    "        ibmLayout = prepareIBMQLayout(qr,tempLayout)\n",
     "        measureFidelityWithChanges(qr,cr,qc,ioClass,i)\n",
     "    \n",
     "def fixTheStuff(ctg):\n",
@@ -115,10 +122,10 @@
     "    return ctg\n",
     "\n",
     "\n",
-    "def measureFidelityWithoutChanges(qr,cr,qc,ibm_layout):\n",
+    "def measureFidelityWithoutChanges(qr,cr,qc):\n",
     "    #least_busy = BasicAer.get_backend('qasm_simulator')\n",
     "    qc.measure(qr,cr)\n",
-    "    qobj = qcompile(qc,least_busy,initial_layout=ibm_layout,pass_manager=None)\n",
+    "    qobj = qcompile(qc,least_busy,initial_layout=None,pass_manager=None)\n",
     "    #This line provides print of the compiled circuit qasm\n",
     "    #print(qobj.experiments[0].header.as_dict())#[\"compiled_circuit_qasm\"])\n",
     "    \n",
@@ -146,7 +153,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -172,7 +181,6 @@
       "replaceTo ['a', 'b', 'c', 'd']\n",
       "sw a b\n",
       "sw b c\n",
-      "['a', 'c']\n",
       "Paths to a f\n",
       "['d', 'c'] ['a', 'f']\n",
       "['b', 'a'] ['a', 'f']\n",
@@ -182,7 +190,6 @@
       "sw b c\n",
       "sw c d\n",
       "sw d e\n",
-      "['a', 'e']\n",
       "Paths to a c\n",
       "['d', 'c'] ['a', 'c']\n",
       "['b', 'a'] ['a', 'c']\n",
@@ -190,7 +197,6 @@
       "['c', 'a'] ['a', 'c']\n",
       "replaceTo ['a', 'b', 'c']\n",
       "sw a b\n",
-      "['a', 'b']\n",
       "Paths to a e\n",
       "['d', 'c'] ['a', 'e']\n",
       "['b', 'a'] ['a', 'e']\n",
@@ -201,11 +207,101 @@
       "sw a b\n",
       "sw b c\n",
       "sw c d\n",
-      "['a', 'd']\n",
       "FIxing the stuff\n",
-      "The updated skeleton is: ['ab', 'bc', 'cd', 'bc', 'ab', 'ab', 'ab', 'bc', 'cd', 'de', 'ef', 'de', 'cd', 'bc', 'ab', 'ab', 'bc', 'ab', 'ab', 'bc', 'cd', 'de', 'cd', 'bc', 'ab']\n",
-      "[]\n",
-      "{'110101': 200}\n"
+      "First and second in swap are 0   1\n",
+      "First and second in swap are 1   2\n",
+      "First and second in swap are 1   2\n",
+      "First and second in swap are 0   1\n",
+      "First and second in swap are 0   1\n",
+      "First and second in swap are 1   2\n",
+      "First and second in swap are 2   3\n",
+      "First and second in swap are 3   4\n",
+      "First and second in swap are 3   4\n",
+      "First and second in swap are 2   3\n",
+      "First and second in swap are 1   2\n",
+      "First and second in swap are 0   1\n",
+      "First and second in swap are 0   1\n",
+      "First and second in swap are 0   1\n",
+      "First and second in swap are 0   1\n",
+      "First and second in swap are 1   2\n",
+      "First and second in swap are 2   3\n",
+      "First and second in swap are 2   3\n",
+      "First and second in swap are 1   2\n",
+      "First and second in swap are 0   1\n",
+      "The updated skeleton is: ['ab', 'bc', 'cd', 'bc', 'ab', 'ab', 'ab', 'bc', 'cd', 'de', 'ef', 'de', 'cd', 'bc', 'ab', 'ab', 'bc', 'ab', 'ab', 'bc', 'cd', 'de', 'cd', 'bc', 'ab'] , its length is: 25\n",
+      "[('f', 1), ('e', 4), ('d', 8), ('a', 9), ('c', 12), ('b', 16)]\n",
+      "The most used quantum gubits are [('f', 1), ('e', 4), ('d', 8), ('a', 9), ('c', 12), ('b', 16)]\n",
+      "Recalculated weights are: {'ab': 9, 'bc': 7, 'cd': 5, 'de': 3, 'ef': 1}\n",
+      "[('f', 1), ('e', 4), ('d', 8), ('a', 9), ('c', 12), ('b', 16)]\n",
+      "Initial self.qubitconnectionscount is [('f', 1), ('e', 4), ('d', 8), ('a', 9), ('c', 12), ('b', 16)]\n",
+      "wiggle wiggle\n",
+      "Initial self.qubitconnectionscount is [('f', 1), ('e', 4), ('d', 8), ('a', 9), ('c', 12), ('b', 16)]\n",
+      "SELFLAYOUTOFQUBIT ('b', 16)\n",
+      "Self.qubitconnectionscount= [('f', 1), ('e', 4), ('d', 8), ('a', 9), ('c', 12)]\n",
+      "Placing together b c\n",
+      "Self.qubitconnectionscount= [('f', 1), ('e', 4), ('d', 8), ('a', 9)]\n",
+      "Placing together c a\n",
+      "Self.qubitconnectionscount= [('f', 1), ('e', 4), ('d', 8)]\n",
+      "Placing together a d\n",
+      "Self.qubitconnectionscount= [('f', 1), ('e', 4)]\n",
+      "Placing together d e\n",
+      "Self.qubitconnectionscount= [('f', 1)]\n",
+      "Placing together e f\n",
+      "Final layout is {'b': 'm', 'c': 'n', 'a': 'l', 'd': 'c', 'e': 'b', 'f': 'a'}\n",
+      "Self skeleton is ['ab', 'bc', 'cd', 'bc', 'ab', 'ab', 'ab', 'bc', 'cd', 'de', 'ef', 'de', 'cd', 'bc', 'ab', 'ab', 'bc', 'ab', 'ab', 'bc', 'cd', 'de', 'cd', 'bc', 'ab']\n",
+      "Missing connections are []\n",
+      "FIxing the stuff\n",
+      "tempDictionary {('q1', 1): ('q1', 12), ('q1', 2): ('q1', 13), ('q1', 0): ('q1', 11), ('q1', 3): ('q1', 2), ('q1', 4): ('q1', 1), ('q1', 5): ('q1', 0)}\n",
+      "items are dict_items([(('q1', 1), ('q1', 12)), (('q1', 2), ('q1', 13)), (('q1', 0), ('q1', 11)), (('q1', 3), ('q1', 2)), (('q1', 4), ('q1', 1)), (('q1', 5), ('q1', 0))])\n",
+      "IBMLAYOUT\n",
+      "{('q1', 1): ('q1', 12), ('q1', 2): ('q1', 13), ('q1', 0): ('q1', 11), ('q1', 3): ('q1', 2), ('q1', 4): ('q1', 1), ('q1', 5): ('q1', 0)}\n",
+      "First and second in swap are 0   1\n",
+      "First and second in swap are 1   2\n",
+      "First and second in swap are 1   2\n",
+      "First and second in swap are 0   1\n",
+      "First and second in swap are 0   1\n",
+      "First and second in swap are 1   2\n",
+      "First and second in swap are 2   3\n",
+      "First and second in swap are 3   4\n",
+      "First and second in swap are 3   4\n",
+      "First and second in swap are 2   3\n",
+      "First and second in swap are 1   2\n",
+      "First and second in swap are 0   1\n",
+      "First and second in swap are 0   1\n",
+      "First and second in swap are 0   1\n",
+      "First and second in swap are 0   1\n",
+      "First and second in swap are 1   2\n",
+      "First and second in swap are 2   3\n",
+      "First and second in swap are 2   3\n",
+      "First and second in swap are 1   2\n",
+      "First and second in swap are 0   1\n",
+      "The updated skeleton is: ['ab', 'bc', 'cd', 'bc', 'ab', 'ab', 'ab', 'bc', 'cd', 'de', 'ef', 'de', 'cd', 'bc', 'ab', 'ab', 'bc', 'ab', 'ab', 'bc', 'cd', 'de', 'cd', 'bc', 'ab'] , its length is: 25\n",
+      "[('f', 1), ('e', 4), ('d', 8), ('a', 9), ('c', 12), ('b', 16)]\n",
+      "The most used quantum gubits are [('f', 1), ('e', 4), ('d', 8), ('a', 9), ('c', 12), ('b', 16)]\n",
+      "Recalculated weights are: {'ab': 9, 'bc': 7, 'cd': 5, 'de': 3, 'ef': 1}\n",
+      "[('f', 1), ('e', 4), ('d', 8), ('a', 9), ('c', 12), ('b', 16)]\n",
+      "Initial self.qubitconnectionscount is [('f', 1), ('e', 4), ('d', 8), ('a', 9), ('c', 12), ('b', 16)]\n",
+      "wiggle wiggle\n",
+      "Initial self.qubitconnectionscount is [('f', 1), ('e', 4), ('d', 8), ('a', 9), ('c', 12), ('b', 16)]\n",
+      "SELFLAYOUTOFQUBIT ('b', 16)\n",
+      "Self.qubitconnectionscount= [('f', 1), ('e', 4), ('d', 8), ('a', 9), ('c', 12)]\n",
+      "Placing together b c\n",
+      "Self.qubitconnectionscount= [('f', 1), ('e', 4), ('d', 8), ('a', 9)]\n",
+      "Placing together c a\n",
+      "Self.qubitconnectionscount= [('f', 1), ('e', 4), ('d', 8)]\n",
+      "Placing together a d\n",
+      "Self.qubitconnectionscount= [('f', 1), ('e', 4)]\n",
+      "Placing together d e\n",
+      "Self.qubitconnectionscount= [('f', 1)]\n",
+      "Placing together e f\n",
+      "Final layout is {'b': 'm', 'c': 'n', 'a': 'l', 'd': 'c', 'e': 'b', 'f': 'a'}\n",
+      "Self skeleton is ['ab', 'bc', 'cd', 'bc', 'ab', 'ab', 'ab', 'bc', 'cd', 'de', 'ef', 'de', 'cd', 'bc', 'ab', 'ab', 'bc', 'ab', 'ab', 'bc', 'cd', 'de', 'cd', 'bc', 'ab']\n",
+      "Missing connections are []\n",
+      "FIxing the stuff\n",
+      "tempDictionary {('q1', 1): ('q1', 12), ('q1', 2): ('q1', 13), ('q1', 0): ('q1', 11), ('q1', 3): ('q1', 2), ('q1', 4): ('q1', 1), ('q1', 5): ('q1', 0)}\n",
+      "items are dict_items([(('q1', 1), ('q1', 12)), (('q1', 2), ('q1', 13)), (('q1', 0), ('q1', 11)), (('q1', 3), ('q1', 2)), (('q1', 4), ('q1', 1)), (('q1', 5), ('q1', 0))])\n",
+      "IBMLAYOUT\n",
+      "{('q1', 1): ('q1', 12), ('q1', 2): ('q1', 13), ('q1', 0): ('q1', 11), ('q1', 3): ('q1', 2), ('q1', 4): ('q1', 1), ('q1', 5): ('q1', 0)}\n"
      ]
     },
     {
@@ -214,6 +310,27 @@
      "text": [
       "C:\\Users\\krylo\\Anaconda3\\lib\\site-packages\\marshmallow\\schema.py:364: ChangedInMarshmallow3Warning: strict=False is not recommended. In marshmallow 3.0, schemas will always be strict. See https://marshmallow.readthedocs.io/en/latest/upgrading.html#schemas-are-always-strict\n",
       "  ChangedInMarshmallow3Warning\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'100000': 200}\n",
+      "ABORT, ERROR WAS produced\n"
+     ]
+    },
+    {
+     "ename": "SystemError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mSystemError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-4-22a129975270>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;31m#if testFromFile(filename) == 0:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mfileName\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtestDir\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mfileName\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mbigFunction\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfileName\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-3-2bf70f23319e>\u001b[0m in \u001b[0;36mbigFunction\u001b[1;34m(fileName)\u001b[0m\n\u001b[0;32m     46\u001b[0m         \u001b[0mctg\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfixTheStuff\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mctg\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     47\u001b[0m         \u001b[0mibmLayout\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mprepareIBMQLayout\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mqr\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mtempLayout\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 48\u001b[1;33m         \u001b[0mmeasureFidelityWithChanges\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mqr\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mcr\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mqc\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mioClass\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     49\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     50\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mfixTheStuff\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mctg\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-3-2bf70f23319e>\u001b[0m in \u001b[0;36mmeasureFidelityWithChanges\u001b[1;34m(qr, cr, qc, ioClass, i)\u001b[0m\n\u001b[0;32m     79\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0merror\u001b[0m \u001b[1;33m!=\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     80\u001b[0m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"ABORT, ERROR WAS produced\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 81\u001b[1;33m         \u001b[1;32mraise\u001b[0m \u001b[0mSystemError\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     82\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     83\u001b[0m     \u001b[1;31m#plot_histogram(result.get_counts())\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mSystemError\u001b[0m: "
      ]
     }
    ],
